[package]
name = "rustos"
version = "0.0.1"
authors = [ "you@example.com" ]

[lib]
name = "std"
crate-type = [ "staticlib" ]
path = "src/libstd/lib.rs"

[features]
rustos = []

[dependencies.external]
path = "bump-pointer"

[dependencies.rlibc]
path = "lib/rlibc"

[dependencies.libc]
path = "lib/rust/src/liblibc"
default-features = false

[dependencies.fringe]
path = "lib/libfringe"
version = "1.2.1"
default-features = false
features = ["enable_alloc", "bare_metal"]

[dependencies.lazy_static]
path = "lib/lazy-static.rs"
