[package]
name = "rustos"
version = "0.0.1"
authors = [ "you@example.com" ]

[lib]
name = "std"
crate-type = [ "staticlib" ]
path = "src/libstd/lib.rs"

[features]
rustos = []

[dependencies.external]
path = "bump-pointer"

[dependencies.rlibc]
git = "https://github.com/alexcrichton/rlibc"
rev = "defb486e765846417a8e73329e8c5196f1dca49a"

[dependencies.fringe]
git = "https://github.com/nathan7/libfringe"
rev = "45ae3505c95f607f3d9e2618a4e619c87df13b29"

[dependencies.lazy_static]
path = "lib/lazy-static.rs"

[dependencies.barn]
path = "lib/barn"
default-features = false
